Try to fix contact & map display on small devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -10427,16 +10427,16 @@ a.waves-effect .waves-ripple {
     }
 }
 
-.bac-ourClients .single-item .bac-clients-container .mt-card-panel {
+/*.bac-ourClients .single-item .bac-clients-container .mt-card-panel {
     float: left;
     width: 45%;
     margin-left: 3.3%
-}
+}*/
 
-.bac-ourClients .single-item .bac-clients-container .mt-card-panel img {
+/*.bac-ourClients .single-item .bac-clients-container .mt-card-panel img {
     width: 100%;
     margin: auto
-}
+}*/
 
 .bac-ourClients .bac-reviews-container {
     padding-left: 0;
@@ -11046,9 +11046,9 @@ a.waves-effect .waves-ripple {
         bottom: 10px;
         right: 0
     }
-    .bac-contact .bac-col-map {
+    /*.bac-contact .bac-col-map {
         display: none
-    }
+    }*/
 }
 
 .bac-contact .bac-textarea-msg {
@@ -11073,6 +11073,7 @@ a.waves-effect .waves-ripple {
 }
 
 .bac-contact .bac-col-map {
+    width: 100%;
     height: 100%;
     position: inherit
 }
@@ -11080,8 +11081,8 @@ a.waves-effect .waves-ripple {
 .bac-contact .bac-col-map .mt-card-panel {
     position: absolute;
     bottom: 0;
-    left: 116px;
-    width: 450px;
+    left: 15%;
+    width: 300px;
     margin-bottom: 0;
     border-bottom: 6px solid #2196F3;
     padding-top: 6px
